--- a/configs/dispatcher-config.properties
+++ b/configs/dispatcher-config.properties
@@ -1,4 +1,4 @@
 resources_num=5
 processors_url=127.0.0.1:1110,127.0.0.1:1111,127.0.0.1:1112
 export_port=1100
-input_file=test-input.txt
+input_file=test-input3-deadlock.txt
